# polymaster-collector

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/plans/: 2026-02-26-collector-design.md  2026-02-26-prowl-bot-ml-architecture.md
src/collector/: __init__.py  cli.py  config.py  daemon.py  db.py  export.py  news.py
systemd/: polymaster-collector.service
tests/: conftest.py  test_daemon.py  test_db.py  test_export.py  test_platforms.py
