[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymaster-collector"
version = "0.1.0"
description = "Standalone Python daemon that catalogs prediction markets from Polymarket and Kalshi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "tomli>=2.0; python_version < '3.12'",
    "pyarrow>=15.0",
    "thefuzz[speedup]>=0.22",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
collector = "collector.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
